# portfolio

./: README.md  cheat_sheet.md
Data science/EDA/paradoxes/: first.ipynb  four.ipynb  second.ipynb  third.ipynb
Data science/EDA/visualization/: utility.py
Data science/ML/A1/: A1_Assignment.ipynb
Data science/ML/Ml projects/: final.ipynb  ml_project_full.ipynb
Data science/ML/Timeseries/: values_graphics.ipynb
Data science/ML/detect bots in vk/: vk_ml.py
Data science/ML/diamonds/: Diamonds_analysis_freelancehunt.ipynb
Data science/ML/exam/: exam.py
Data science/ML/heart-disease/: predict_heart_disease.ipynb
Data science/ML/kNN/: kNN.ipynb
Data science/ML/mnist/: mnist-Copy1.ipynb
Data science/Statistics/credit/: credit.ipynb
Data science/Statistics/malocclusion/: malocclusion_analysis.ipynb
Data science/Working with images/ocr_project/: .gitignore  pyproject.toml
Data science/Working with images/ocr_project/.ipynb_checkpoints/: post_process-checkpoint.ipynb
Data science/Working with images/ocr_project/ocr_project/: ocr.py  output.txt  post_processed.txt  post_processing.py
Data science/detect_cars/: Readme.md  read_cam.py
Data science/detect_cars/images/: 20230405_171810.txt  20230405_172855.txt  20230405_173453.txt  20230405_175903.txt  20230405_194257.txt  20230405_205957.txt  20230405_213818.txt  20230405_214654.txt  20230405_224201.txt
Python scripts/Algos/dijkstra_find/: dijkstra_find.py  (+1 more)
Python scripts/Web testing/: wget-log
Scraping/: README.md
Scraping/binance scraper/: scraper.py
Web/django_app_simple/: requirements.txt
(+33 files in other folders)
