[tool.poetry]
name = "ocr_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yapf = "^0.31.0"
isort = "^5.9.3"
pyocr = "^0.8"
Pillow = "^8.4.0"
click = "^8.0.3"
opencv-python = "^4.5.4"
pytesseract = "^0.3.8"
pdf2image = "^1.16.0"
spacy = "^3.1.3"
Unidecode = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
